# qpOASES

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  AUTHORS.txt  CMakeLists.txt  INSTALL  INSTALL.txt  Makefile  README  README.txt  VERSIONS  VERSIONS.txt  make.mk  make_cygwin.mk  make_linux.mk  make_osx.mk  make_windows.mk  qpOASESConfig.cmake.in
.coin-or/: projDesc.xml
binaries/3.0.0/matlab/: qpOASES.mexmaci64  qpOASES.mexw64  qpOASES_options.m  qpOASES_sequence.mexa64  qpOASES_sequence.mexw32
binaries/3.0.1/: qpOASES_auxInput.m  qpOASES_sequence.m  qpOASES_sequence.mexw32  qpOASES_sequence.mexw64
binaries/3.0.1/matlab/: qpOASES.m  qpOASES.mexa64  qpOASES.mexmaci64  qpOASES.mexw32  qpOASES.mexw64  qpOASES_sequence.mexa64  qpOASES_sequence.mexmaci64
binaries/3.1.0/matlab/: qpOASES.mexw64  qpOASES_sequence.mexmaci64  qpOASES_sequence.mexw32  qpOASES_sequence.mexw64
binaries/3.2.0/matlab/: qpOASES.mexa64  qpOASES_sequence.m  qpOASES_sequence.mexmaci64  qpOASES_sequence.mexw32  qpOASES_sequence.mexw64
binaries/3.2.1/matlab/: qpOASES.mexw32  qpOASES.mexw64  qpOASES_sequence.mexw32  qpOASES_sequence.mexw64
doc/: Makefile  doxygen.config  doxygen_chris.config  mainpage.dox
doc/3.0/doxygen/: BLASReplacement_8cpp.html  BLASReplacement_8cpp__incl.map  Bounds_8cpp.html  Bounds_8cpp__incl.map  Bounds_8hpp.html  Bounds_8hpp_source.html  Bounds_8ipp.html  Bounds_8ipp__dep__incl.map  Bounds_8ipp__dep__incl.md5  Constants_8hpp.html  Constants_8hpp__dep__incl.md5  Constants_8hpp__incl.map  Constants_8hpp_source.html  ConstraintProduct_8hpp.html  ConstraintProduct_8hpp_source.html  Constraints_8cpp.html  Constraints_8cpp__incl.map  Constraints_8cpp__incl.md5  Constraints_8hpp.html  (+277 more)
examples/: Makefile  example1.cpp  example1_qore.cpp  example1_qore_wrapper.cpp  example1a.cpp  example1b.cpp  example1b_qore.cpp  example1b_qore_wrapper.cpp  example1qore.cpp  example2.cpp  example3.cpp  example3b.cpp  example4.cpp  example4CP.cpp  example5.cpp  exampleLP.cpp  example_chris.cpp  example_matrixconversion.cpp  qrecipe.cpp  qrecipePresolverDense.cpp  qrecipePresolverSparse.cpp  qrecipeSchur.cpp  qrecipe_data.hpp  testmat_chris.mm
examples/generate_sparse_qp/: main.py  qp_data.in.hpp  simple_qp_data.hpp  trivial_qp_data.hpp
include/: qpOASES.hpp
include/qpOASES/: Bounds.hpp  Bounds.ipp  ChrisTemp.hpp  Constants.hpp  ConstraintProduct.hpp  Constraints.hpp  Constraints.ipp  Flipper.hpp  Indexlist.hpp  Indexlist.ipp  LapackBlasDeclarations.hpp  LapackBlasReplacement.hpp  Matrices.hpp  MatrixConversion.hpp  MessageHandling.hpp  MessageHandling.ipp  Options.hpp  Presolver.hpp  Presolver.ipp  PresolverOptions.hpp  PresolverOptions.ipp  QProblem.hpp  QProblem.ipp  QProblemB.hpp  QProblemB.ipp  QProblemQore.hpp  SQProblem.hpp  SQProblem.ipp  SQProblemSchur.hpp  SQProblemSchur.ipp  SparseSolver.hpp  SubjectTo.hpp  SubjectTo.ipp  Types.hpp  UnitTesting.hpp  Utils.hpp  Utils.ipp
interfaces/CUTEst/: Makefile  qpoasesCutest.cpp  readme.txt
interfaces/c/: Makefile  c_example1.c  c_example1a.c  c_example1b.c  example1.c  example1a.c  example1b.c  qpOASES_wrapper.cpp  qpOASES_wrapper.h
interfaces/matlab/: Makefile  make.m  qpOASES.cpp  qpOASES.m  qpOASES_auxInput.m  qpOASES_matlab_utils.cpp  qpOASES_matlab_utils.hpp  qpOASES_sequence.cpp  qpOASES_sequence.m  testQPset.m
interfaces/octave/: make.m  qpOASES.cpp  qpOASES.m  qpOASES_auxInput.m  qpOASES_octave_utils.cpp  qpOASES_octave_utils.hpp  qpOASES_options.m  qpOASES_sequence.cpp  qpOASES_sequence.m
interfaces/python/: .gitignore  README.rst  pyproject.toml  qpoases.pxd  qpoases.pyx  setup.py
interfaces/scilab/: Makefile  qpOASESinterface.c  qpOASESinterface.sce  qpOASESroutines.cpp
interfaces/simulink/: example_QProblem.mdl  example_QProblemB.mdl  example_SQProblem.mdl  load_example_QProblem.m  load_example_QProblemB.m  load_example_SQProblem.m  make.m  qpOASES_QProblem.cpp  qpOASES_QProblemB.cpp  qpOASES_SQProblem.cpp  qpOASES_simulink_utils.cpp
qpPresolver/: Makefile  make.mk  make_linux.mk
qpPresolver/include/: qpPresolver.h
qpPresolver/src/: Makefile  ecrmatrix.c  minheap.c  options.c  presolver.c  stack.c  utility.c
releases/3.1.2/: AUTHORS  INSTALL.txt  Makefile  README  make_cygwin.mk  make_linux.mk  make_osx.mk
src/: BLASReplacement.cpp  Bounds.cpp  ChrisTemp.cpp  Constraints.cpp  Flipper.cpp  Indexlist.cpp  LAPACKReplacement.cpp  Makefile  Matrices.cpp  MatrixConversion.cpp  MessageHandling.cpp  OQPinterface.cpp  Options.cpp  Presolver.cpp  PresolverOptions.cpp  QProblem.cpp  QProblemB.cpp  QProblemQore.cpp  SQProblem.cpp  SQProblemSchur.cpp  SolutionAnalysis.cpp  SparseSolver.cpp  SubjectTo.cpp  Utils.cpp
testing/: Makefile  checkForMemoryLeaks  runUnitTests
testing/c/: Makefile  test_c_example1.c  test_c_example1a.c  test_c_example1b.c
testing/cpp/: Makefile  test_bench.cpp  test_constraintProduct1.cpp  test_constraintProduct2.cpp  test_example1.cpp  test_example1a.cpp  test_example1b.cpp  test_example2.cpp  test_example4.cpp  test_example5.cpp  test_example6.cpp  test_example7.cpp  test_exampleLP.cpp  test_externalChol1.cpp  test_gradientShift.cpp  test_guessedWS1.cpp  test_hs268.cpp  test_identitySqproblem.cpp  test_indexlist.cpp  test_infeasible1.cpp  test_janick1.cpp  test_janick2.cpp  test_matrices.cpp  test_matrices2.cpp  test_matrices3.cpp  test_qrecipe.cpp  test_qrecipeSchur.cpp  test_qrecipe_data.hpp  test_runAllOqpExamples.cpp  test_sebastien1.cpp  test_smallSchur.cpp  test_vanBarelsUnboundedQP.cpp
testing/matlab/: runAllTests.m
testingdata/matlab/: QAP8.mat  alexInfeas1.mat  alexInfeas2.mat  benchmarkCHAIN1A.mat  benchmarkCRANE2.mat  benchmarkCRANE3.mat  benchmarkEXAMPLE1A.mat
trunk/: AUTHORS.txt  INSTALL.txt  README.txt  VERSIONS  make.mk  make_cygwin.mk  make_linux.mk  make_osx.mk  make_windows.mk
trunk/doc/: Makefile  doxygen.config  mainpage.dox
trunk/examples/: Makefile  example1.c  example1b.c  example3.c  exampleLP.c
trunk/src/: Bounds.c  Constraints.c  Flipper.c  Indexlist.c  Makefile  Matrices.c  MessageHandling.c  OQPinterface.c  Options.c  QProblem.c  QProblemB.c  Utils.c
(+1077 files in other folders)
